# devgrowth

./: .env.example  .gitignore  Cargo.toml  DESIGN.md  README.md  config.yml  devgrowth.txt  notes.md
.sqlx/: query-0c4dba35228fe49a8c0978c5e13189f65d531b09469fbb16cf18280fb2cee8af.json  query-0dc7f1d440f60d97bf773e22bfa86e31b2e0fddc9849261128439f78f77b704f.json  query-1e545ef7ef8c8afb18099801d5f990008bfb0708094e1aa565ed8abe3215b414.json  query-2b0246f293e9b0dcc844368d8db5a02b15363a94e4f812e2fae28678918a8d41.json  query-2cf1fa126cdc3e9e7bb1f3ca7d01fdbb5a2cfc63825602acdf08f11f12c0bb4d.json  query-334ea24512ca65d2afa5571357f1bde2ece47c041bf8c68a5113143358e99a76.json  query-350e61bbef21a4b5a3357d4bdaa49a1976ffad41584ec0bc3725ea4917f7348f.json  query-3d23829cbcae94e8e615c6ce4bda5eae1acd86eac214e915f2f071836a3560fd.json  query-401e953f7e7fefce4bf1e13ab57a59f44c20c54cac9bb31989c0e36d4f002580.json  query-4685fecd62f596adffe69f55503ed1c1086a040bdef0c495dffb9d3d854051e8.json  query-4e32ceafe561a4a8cdebe89be67221296b5aa24a364ec44ec6e30b2240dfe310.json  query-4f80b13ea23605fc903d7c7505d3f097de3759af1f14cc4b33f57cc5bb86b288.json  query-528d80aa5c044904f9b2a6bee4d3d5fc514730b53dc09699f1b17f85cfaaca87.json  query-55a39c6dc45609c5e00be0eaef6ea6f4855ff8bcfa8566ff3606d90187ac3e5e.json  query-56eea9ef26ea3ee02de549d85ab1af18ff4f160a78709d5f45485195b8451d49.json  query-579ce5ae47f894bc2b20d24fd1c6f9b25af66ae98eb1e710d98c748b90498933.json  query-58df76192902172369f71e39af63451c146469a135253aca85dd88d7fc48a66a.json  query-5e0adcff6ccdc19bcd5084118c86fbb085d5eff2bee6885680e6289a3b6ecc6e.json  (+17 more)
(+73 files in other folders)
