[package]
name = "devgrowth"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "migrate",
] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
actix-web = "4.3"
env_logger = "0.10"
log = "0.4"
