[package]
name = "devgrowth"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "chrono",
    "migrate",
] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
actix-web = "4.3"
env_logger = "0.10"
log = "0.4"
octocrab = "0.41.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
backoff = { version = "0.4", features = ["tokio"] }
thiserror = "1.0.64"
serde_json = "1.0.128"
actix-files = "0.6.6"
oauth2 = { version = "4.4.2", features = ["reqwest"] }
actix-session = { version = "0.10.1", features = ["cookie-session"] }
url = "2.5.2"
